src/test/deca/context/invalid/provided/float_invalid.deca

{int x = 2;
int z = 2.6  ; 
float y = 3 ;
}

/*  Commentaire  */
